# SpinningMomo

./: .clang-format  .cnb.yml  .cursorignore  .cursorrules  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CREDITS.md  DATABASE.md  DEVELOPMENT.md  LEGAL.md  LICENSE  README.md  README_EN.md  WARP.md  app-sidebar.tsx  cliff.toml  package.json  vcpkg.json  xmake.lua
old_codes/: CMakeLists.txt
old_codes/include/: app.h  gui_manager.h
old_codes/src/: CMakeLists.txt  app.cpp  capture_test.cpp  capture_test.h  gui_manager.cpp  main.cpp  window_capture.cpp
src/: CMakeLists.txt  app.cpp  app.ixx  config_manager.cpp  config_manager.hpp  constants.cpp  constants.hpp  event_handler.cpp  event_handler.hpp  gui_manager.cpp  image_processor.hpp  letterbox_window.cpp  letterbox_window.hpp  link_workaround.ixx  logger.cpp  logger.hpp  main.cpp  main_old.cpp  menu_window.cpp  menu_window.hpp  notification_manager.cpp  notification_manager.hpp  notification_window.cpp  notification_window.hpp  overlay_window.cpp  overlay_window.hpp  parameter_ocr.cpp  parameter_ocr.hpp  parameter_tracker.cpp  parameter_tracker.hpp  pch.hpp  preview_window.cpp  preview_window.hpp  resource.rc  thread_raii.hpp  tray_icon.cpp  tray_icon.hpp  ui_manager.cpp  ui_manager.hpp  version.hpp  (+8 more)
src/common/: types.ixx
src/common/menu_data/: menu_data.cpp  menu_data.ixx  types.ixx
src/common/menu_ids/: menu_ids.ixx
src/common/resolution/: resolution.cpp  resolution.ixx
src/core/: constants.cpp  image_processor.cpp  image_processor.hpp  menu_window.cpp  menu_window.hpp  message_center.hpp  notification_window.cpp  notification_window.hpp  preview_window.cpp  thread_raii.hpp  tray_icon.cpp  tray_icon.hpp  win_config.hpp  window_capturer.cpp  window_capturer.hpp  window_utils.cpp  window_utils.hpp
src/core/actions/: actions.cpp  actions.ixx
src/core/async/: async.cpp  async.ixx  runtime.cpp  runtime.ixx  state.ixx  ui_awaitable.ixx
src/core/commands/: builtin.cpp  registry.cpp  registry.ixx  state.ixx  types.ixx
src/core/config/: config.cpp  config.ixx  config_io.cpp  config_io.ixx  state.ixx
src/core/config_manager/: config_manager.cpp  config_manager.ixx
src/core/constants/: constants.cpp  constants.ixx
src/core/database/: data_mapper.ixx  database.cpp  database.ixx  migration.cpp  migration.ixx  state.ixx  types.ixx
src/core/dialog_service/: dialog_service.cpp  dialog_service.ixx  state.ixx
src/core/events/: events.cpp  events.ixx  registrar.cpp  registrar.ixx  state.ixx
src/core/http_client/: http_client.cpp  http_client.ixx  state.ixx  types.ixx
src/core/http_server/: http_server.cpp  http_server.ixx  routes.cpp  routes.ixx  sse_manager.cpp  sse_manager.ixx  state.ixx  static.cpp  static.ixx  types.ixx
src/core/i18n/: i18n.cpp  i18n.ixx  state.ixx  types.ixx
src/core/initializer/: database.cpp  database.ixx  initializer.cpp  initializer.ixx
src/core/migration/: migration.cpp  migration.ixx
src/core/notifications/: events.ixx  notifications.cpp  notifications.ixx  types.ixx
src/core/rpc/: engine.cpp  engine.ixx  notification_hub.cpp  notification_hub.ixx  registry.cpp  registry.ixx  rpc.cpp  rpc.ixx  state.ixx  types.ixx
src/core/rpc_handlers/: rpc_handlers.cpp  rpc_handlers.ixx  state.ixx  types.ixx
src/core/runtime_info/: runtime_info.cpp  runtime_info.ixx
src/core/settings/: settings_manager.cpp  settings_manager.hpp  settings_types.hpp
src/core/shutdown/: shutdown.cpp  shutdown.ixx
src/core/state/: README.md  app_info.ixx  app_state.cpp  app_state.ixx  runtime_info.ixx
src/core/tasks/: state.ixx  tasks.cpp  tasks.ixx
src/core/webview/: drag_handler.cpp  drag_handler.ixx  events.ixx  host.cpp  host.ixx  rpc_bridge.cpp  rpc_bridge.ixx  state.ixx  static.cpp  static.ixx  types.ixx  webview.cpp  webview.ixx
src/core/worker_pool/: state.ixx  worker_pool.cpp  worker_pool.ixx
src/extensions/infinity_nikki/: README.md  asset_service.cpp  asset_service.ixx  game_directory.cpp  game_directory.ixx  map_service.cpp  map_service.ixx  media_hardlinks.cpp  media_hardlinks.ixx  metadata_dict.cpp  metadata_dict.ixx  photo_service.cpp  photo_service.ixx  screenshot_hardlinks.cpp  screenshot_hardlinks.ixx  task_service.cpp  task_service.ixx  types.ixx  world_area.cpp  world_area.ixx
src/features/: builtin_features.cpp  registry.cpp  registry.ixx
src/features/asset/: asset.cpp  asset.ixx  repository.cpp  repository.ixx  scanner.cpp  scanner.ixx  state.ixx  thumbnail.cpp  thumbnail.ixx  types.ixx
src/features/backup/: backup.cpp  backup.ixx  types.ixx
src/features/file_dialog/: file_dialog.cpp  file_dialog.ixx  rpc.cpp  rpc.ixx  types.ixx
src/features/gallery/: README.md  gallery.cpp  gallery.ixx  original_locator.cpp  original_locator.ixx  root_availability.cpp  root_availability.ixx  scan_common.cpp  scan_common.ixx  scanner.cpp  scanner.ixx  state.ixx  static_resolver.cpp  static_resolver.ixx  types.ixx  watcher.cpp  watcher.ixx
src/features/letterbox/: letterbox.cpp  letterbox.ixx  state.ixx  usecase.cpp  usecase.ixx
src/features/media/: database.cpp  database.ixx  media.cpp  media.ixx  scanner.cpp  (+4 more)
src/handlers/: event_registrar.cpp  event_registrar.ixx  feature_handlers.cpp  feature_handlers.ixx  settings_handlers.cpp  settings_handlers.ixx  system_handlers.cpp  system_handlers.ixx  ui_handlers.cpp  ui_handlers.ixx  webview_handlers.cpp  webview_handlers.ixx  window_handlers.cpp  window_handlers.ixx
src/locales/: en-US.json  zh-CN.json
src/migrations/: 001_initial_schema.sql  002_watch_root_recovery_state.sql  003_infinity_nikki_params_nuan5_columns.sql  004_infinity_nikki_user_record_key_value.sql  005_asset_missing_lifecycle.sql
src/tracker/: parameter_tracker.hpp  parameter_types.hpp
src/types/: config.ixx  notification.ixx  presets.ixx  preview.ixx  screenshot.ixx  state.ixx  tray_icon.ixx  ui.ixx
src/ui/: app_window.cpp  app_window.ixx  app_window_rendering.cpp  app_window_rendering.ixx
src/utils/: display.cpp  display.ixx  logger.cpp  logger.ixx  lru_cache.ixx  path.ixx  time.ixx  timer.ixx
(+1156 files in other folders)
